--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "E-commerce-automation",
   "version": "1.0.0",
-  "description": "",
+  "description": "Automation Test Project for an E-commerce website",
   "main": "index.js",
   "scripts": {
     "debug": "node --inspect-brk node_modules/.bin/nightwatch",
-    "test": "nightwatch"
+    
+    "test":"nightwatch",
+    "test:sandbox": "npx nightwatch -e firefox  -t sandbox -r html-reporter.js",
+    "test:smoke_tests": "npx nightwatch -e firefox  -t smoke_tests -r html-reporter.js",
+
+    "test:chrome": "npx nightwatch -e chrome -r html-reporter.js",
+    "test:headless:chrome": "npx nightwatch -e chromeHeadless -r html-reporter.js",
+    "test:firefox": "npx nightwatch -e firefox -r html-reporter.js",
+    "test:headless:firefox": "npx nightwatch -e firefoxHeadless -r html-reporter.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +25,7 @@
     "geckodriver": "^1.19.1",
     "handlebars": "^4.7.3",
     "nightwatch": "^1.3.4",
+    "selenium-server": "^3.141.59",
     "selenium-standalone": "^6.17.0"
   }
 }
