--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "chromedriver": "^80.0.1",
     "dotenv": "^7.0.0",
     "faker": "^4.1.0",
-    "geckodriver": "^1.19.1",
     "handlebars": "^4.7.3",
     "nightwatch": "^1.3.4",
     "nodemailer": "^6.4.5",
     "selenium-server": "^3.141.59",
-    "selenium-standalone": "^6.17.0",
-    "timer": "^1.0.1"
+    "selenium-standalone": "^6.17.0"
   }
 }
